Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-548

Proton-C driver and URL Parsers don't support AF_INET6 (IPv6)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.6
    • proton-0.9
    • proton-c, proton-j
    • None

    Description

      The proton-c driver hard-codes its sockets to AF_INET, rather than using the address family associated with a particular address.

      On systems that enable IPv6, the address "localhost" cannot be used because it resolves to "::1" rather than "127.0.0.1"

      Attachments

        1. 08_fix_ipv6_windows.patch
          2 kB
          Dominic Evans

        Activity

          People

            cliffjansen Clifford Jansen
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: