PROTON-548 - Added IPv6 url syntax to C and Java URL parsers.  Added IPv6 handling to C driver.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1583673 13f79535-47bb-0310-9956-ffa450edef68